# Ember

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  api.cpp  gen_exports.py  gen_symbols.py  main.cpp  stdex.cpp  win32_gui_layout.cpp  win32_gui_layout.h
api/: Buf.cpp  (+7 more)
dk2/: CMakeLists.txt  dk2_functions.cpp  dk2_globals.cpp  dk2_relink.cpp  dk2_relink_refs.cpp  gen_dk2.py  gen_functions_cpp.py  gen_functions_h.py  gen_globals_cpp.py  gen_globals_h.py  gen_relink_refs_cpp.py  gen_relink_refs_h.py  gen_struct_cpp.py  gen_struct_h.py  gen_symbols.py  gen_utils.py  sources.cmake
dk2/dk2/: AABB.cpp  Area2i.cpp  AsyncThing.cpp  BFMU_header.cpp  Buf1000.cpp  ButtonCfg.cpp  CAnimMeshResource.cpp  CBridge.cpp  CBridgeInterface.cpp  CButton.cpp  CCamera.cpp  CClickButton.cpp  CCommunicationInterface.cpp  CComponent.cpp  CCreature.cpp  CCreaturePool.cpp  CDeadBody.cpp  CDefaultPlayerInterface.cpp  CDirectIFFFile.cpp  CDoor.cpp  CEngine2DAnimMesh.cpp  CEngine2DMeshSurface.cpp  CEngine2DPrimitive.cpp  CEngine2DRotatableSprite.cpp  CEngine2DSprite.cpp  CEngine2DStaticMesh.cpp  CEngineAnimMesh.cpp  CEngineCompressedSurface.cpp  CEngineDDSurface.cpp  CEngineDynamicHeightField.cpp  CEngineDynamicMesh.cpp  CEngineInterface.cpp  CEnginePrimitiveBase.cpp  CEngineQuadPlane.cpp  CEngineSprite.cpp  CEngineStaticHeightField.cpp  CEngineStaticMesh.cpp  CEngineSurface.cpp  CEngineSurfaceBase.cpp  CEngineUnlitProceduralMesh.cpp  (+238 more)
dk2/include/: dk2_functions.h  dk2_globals.h  dk2_relink.h  dk2_relink_refs.h
dk2/include/dk2/: AABB.h  AnimVertEx.h  Area2i.h  AsyncThing.h  BFMU_header.h  Buf1000.h  ButtonCfg.h  CAnimMeshResource.h  CBridge.h  CBridgeInterface.h  CButton.h  CCamera.h  CClickButton.h  CCommunicationInterface.h  CComponent.h  CCreature.h  CCreaturePool.h  CDeadBody.h  CDefaultPlayerInterface.h  CDirectIFFFile.h  CDoor.h  CEngine2DAnimMesh.h  CEngine2DMeshSurface.h  CEngine2DPrimitive.h  CEngine2DRotatableSprite.h  CEngine2DSprite.h  CEngine2DStaticMesh.h  CEngineAnimMesh.h  CEngineCompressedSurface.h  CEngineDDSurface.h  CEngineDynamicHeightField.h  CEngineDynamicMesh.h  CEngineInterface.h  CEnginePrimitiveBase.h  CEngineQuadPlane.h  CEngineSprite.h  CEngineStaticHeightField.h  CEngineStaticMesh.h  CEngineSurface.h  CEngineSurfaceBase.h  (+293 more)
dk2/include_old/: dk2.h
dk2/include_old/dk2/: CDefaultPlayerInterface.h  StaticListeners.h  action.h  globals.h  gui.h  gui_elements.h  resources.h  window.h
dk2/symbols/: CMakeLists.txt  dk2_functions.cpp  dk2_globals.cpp  dk2_relink.cpp  dk2_relink_refs.cpp  sources.cmake
dk2/symbols/dk2/: AABBc.cpp  AnimVertEx.cpp  AsyncThing.cpp  Buf1000.cpp  CAnimMeshResource.cpp  CBridge.cpp  CBridgeInterface.cpp  CCamera.cpp  CCommunicationInterface.cpp  CComponent.cpp  CCreaturePool.cpp  CDefaultPlayerInterface.cpp  CDirectIFFFile.cpp  CEngineCompressedSurface.cpp  CEngineDDSurface.cpp  CEngineInterface.cpp  CEngineSurface.cpp  CEngineSurfaceBase.cpp  CEngineSurfaceScaler.cpp  CEntryComponent.cpp  CFileManager.cpp  CFileManager_f130.cpp  CFrontEndComponent.cpp  CGadget.cpp  CGameComponent.cpp  CGuiManager.cpp  CIFFFile.cpp  CLocalCommunication.cpp  CMemLoadIFFFile.cpp  CMeshGroup.cpp  CMeshResourceBase.cpp  CNetworkComponent.cpp  CPCEngineInterface.cpp  CPolyMeshResource.cpp  CRenderInfo.cpp  CShotFun1.cpp  CSoundSystem.cpp  CState.cpp  CWindow.cpp  CWindowTest.cpp  (+178 more)
dk2/symbols/include/: dk2_functions.h  dk2_globals.h  dk2_relink.h
dk2/symbols/win/: zlib_config.cpp
hooks/: CMakeLists.txt  api.cpp  direct_input.cpp  game_loop.cpp  main.cpp  window.cpp
hooks/include/: dk2_hooks.h
hooks/include/hooks/: api.h  direct_input.h  game_loop.h  main.h  window.h
launcher/: CItemIterator.h  CMakeLists.txt  create_process.cpp  dd_modes.cpp  dk2_versions.h  keyboard_bind.cpp  launcher.cpp  layout.cpp  layout.h  md5_hash.h  open_directory.h  registry.cpp  status.cpp  utils.cpp
launcher/include/: create_process.h  dd_modes.h  keyboard_bind.h  launcher.h  layout.h  registry.h  status.h  utils.h
makedll/: CMakeLists.txt  makedll.cpp
patches/: CMakeLists.txt  add_win10_support.cpp  control_windowed_mode.cpp  fix_close_window.cpp  fix_keyboard_state_on_alt_tab.cpp  fix_usage_unitialized_structure.cpp  force_windowed_mode.cpp  notify_another_instance_is_running.cpp  reduce_title_screen_time.cpp  replace_dll.cpp  show_wireframe.cpp  unlimited_zoom_hack.cpp  use_cwd_as_dk2_home_dir.cpp  use_wheel_to_zoom.cpp
patches/gog_patch_dll/: CMakeLists.txt  gog_cfg.cpp  gog_exports.cpp  gog_fake.cpp  gog_globals.cpp  gog_patch_dll.cpp
patches/hires_textures/: expand_size_hash_table.cpp  redirect_load_cached_textures.cpp  upscale_texture_buffer.cpp
patches/include/: dk2_patches.h
patches/mouse_dinput/: fix_relative_mouse_data.cpp  replace_mouse_dinput_to_user32.cpp
patches/mouse_user32/: fix_mouse_pos_on_resized_window.cpp
patches/screen_resolution/: dpi_aware.cpp  expand_surf_hash_list.cpp  expand_surf_idx_array.cpp  fix_surface_buffer_size_on_max_resolution.cpp  patch_draw_buffer_extra_size.cpp  patch_game_resolution.cpp  patch_menu_resolution.cpp  replace_custom_heap.cpp
patches/sup_marco_ct/: cheatcode_spawner.cpp  edit_player.cpp  edit_selected_unit.cpp  make_money_editable.cpp
patches/tools/: unpack_texture_cache.cpp
reimpl/: CMakeLists.txt  SurfHashList__probablySort.cpp  SurfaceHolder.cpp  dd_misc.cpp  dk2dd_init.cpp  draw3dScene.cpp  mydd_scene_init.cpp
reimpl/directx/: directx_main.cpp
reimpl/gog_patch_dll/: CMakeLists.txt  gog_exports.cpp  gog_patch_dll.cpp
reimpl/include/: gui_globals.h  reimpl.h  tools.h
reimpl/tools/: unpack_texture_cache.cpp
unpacker/: CMakeLists.txt  unpacker.cpp
utils/: CMakeLists.txt  StackLimits.cpp  dk2_info.cpp  embed_resources.cpp  embed_resources.h  parse.cpp  patch.cpp  reversemode_mimicry.cpp  stacktrace.cpp  stacktrace_window.cpp  stdex.cpp  xrefs.cpp
utils/genlib/: gen_lib.bat
utils/include/: dk2_info.h  imports.h  reversemode_mimicry.h  stdex.h
utils/makedll/: makedll.cpp
utils/unpacker/: CMakeLists.txt  unpacker.cpp
utils/win32_gui_layout/: CMakeLists.txt  win32_gui_layout.cpp
(+686 files in other folders)
